# ChangeLog for kde-base/kopete
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kopete/ChangeLog,v 1.218 2009/10/12 23:58:47 abcd Exp $

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org>
  -files/kopete-3.5.9-icq-protocol-change.patch, -kopete-3.5.10-r3.ebuild:
  Clean out cruft

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> -kopete-3.5.9.ebuild,
  -kopete-3.5.9-r2.ebuild:
  KDE 3.5.9 removal

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> kopete-4.3.1.ebuild:
  amd64 stable wrt #287697

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> -kopete-4.3.0.ebuild:
  Drop KDE 4.3.0

  08 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org> kopete-4.3.0.ebuild,
  kopete-4.3.1.ebuild, kopete-4.3.2.ebuild:
  Libgadu require threads enabled to work.

*kopete-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> +kopete-4.3.2.ebuild:
  Version bump

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org> kopete-4.3.1.ebuild:
  Remove kopete-facebook useflag and dep, still only available for overlay
  ebuilds

*kopete-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kopete-4.3.1.ebuild:
  Version bump

  04 Aug 2009; Alex Alexander <wired@gentoo.org> metadata.xml:
  added skype use desc

*kopete-4.3.0 (04 Aug 2009)

  04 Aug 2009; Alex Alexander <wired@gentoo.org> +kopete-4.3.0.ebuild:
  Version bump

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org> kopete-3.5.10.ebuild:
  alpha/ia64/sparc stable wrt #271889

  08 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org> kopete-3.5.10-r4.ebuild:
  Add ~mips keywords

  06 Jul 2009; Brent Baude <ranger@gentoo.org> kopete-3.5.10.ebuild:
  Marking kopete-3.5.10 ppc64 stable for bug 271889

*kopete-4.2.4-r1 (26 Jun 2009)

  26 Jun 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/4.2.4-yahoo.patch, +kopete-4.2.4-r1.ebuild:
  Revision bump. Fixes kopete and yahoo issues. Fixes bug #274751.
