@@ -302,6 +302,7 @@
 =kde-base/kopete-3.5.10
 =kde-base/kopete-3.5.10-r2
 =kde-base/kopete-3.5.10-r4
+=kde-base/kopete-3.5.10-r5
 =kde-base/korganizer-3.5.10
 =kde-base/korn-3.5.10
 =kde-base/korundum-3.5.10
