@@ -8,9 +8,11 @@ AUX kopete-3.5.10-icq-protocol-change2.patch 1193 RMD160 3b64b3e73e676ba470224ae
 AUX kopete-3.5.10-jabber-protocol-gtalknickfix.patch 557 RMD160 b4555d2843dbdb8acf60ddd404ccbdb588b25022 SHA1 f871ed82fe6678d0456aab02b3110030d54dcc52 SHA256 a8ada8e5d3d44e3c8f7ef64e05bdec51edc7c9c130b988a53192232d73b33bdd
 AUX kopete-3.5.10-libgadu-CVE-2008-4776.patch 1122 RMD160 f0bee221b4e98731f6dfc2612fb636abb929854a SHA1 b8e3f021ddae685cafcca557ce1054f803e2a88a SHA256 58ce7f80403a6457e4803806b90be339820e4d654ba43a8323ea72b5ef0cd62a
 AUX kopete-3.5.5-icqfix.patch 749 RMD160 129efdaa2bf0dbf88fe4714b4daab5f3606cbc91 SHA1 f3ef29b821ba5f0b62438a7b78a982625e42bd94 SHA256 e165e409343918ac49da0df867f7df34fffa5adfd550ca3079016d0b576a1987
+DIST kdenetwork-3.5-patchset-02.tar.bz2 59139 RMD160 ba03a66068026fc103e5a29a5cec33339685bf6b SHA1 7c1e4d1e37dbe3fa9a44a784c74ca302c6a6dd18 SHA256 21a9741fc3126a8c87db24b279631427cf961459053dc564af12c031abfa9e9c
 DIST kdenetwork-3.5.10.tar.bz2 9336764 RMD160 f888f53746f1e734d3c15c09eac1c2b9c0564b20 SHA1 eb280bffaf4642bfda442cc6a9fb38dc4163b720 SHA256 a511aafe2356d6041de1c617085e6d4cf5b3cab38c390dc044c9bd86b3f0d4e9
 EBUILD kopete-3.5.10-r2.ebuild 4119 RMD160 b024a6b17a68b96e0209d8ab66172017d4129538 SHA1 9fa9816c772ecb5c4349190afb6d6fb1f32c95e8 SHA256 4bb57afc0292fae18849b58aa5deefca3a0ee8cf661a747bd600e4847f0d9d68
 EBUILD kopete-3.5.10-r4.ebuild 4691 RMD160 b43d9529dcae25405ec82c7b2407f4e4953ca94c SHA1 7977199877ef1c2b3c46d2b6ca9366dab9da8cda SHA256 63e8ac0c8424b3347673e6384905c03bc6b6025788780499bbf704b29fef2739
+EBUILD kopete-3.5.10-r5.ebuild 4779 RMD160 8bd08c540b731b57ca3079a4b4f912362f173f7e SHA1 412ed59aeced92f3bcf3f29fc036b91020ae0472 SHA256 a348b80e84fa747b11a39cdf4245cb6d7cc278274c16393b7c86f9b01079b2c8
 EBUILD kopete-3.5.10.ebuild 4053 RMD160 41c7c906e627c637b33ae38d160ef06475a8a418 SHA1 1f65210a253621c4625839d2d63fb898342bde99 SHA256 7bbc78b00ced6af2ca532fd87a2230f2b03d717de6d198cb548882f5ee86b01b
-MISC ChangeLog 31661 RMD160 ecc965a428464cdfce7258bd76ae2c972d2dad46 SHA1 db1e48f8d36987dfd9f5fede39b55ad2e7235d4e SHA256 e08da2cd378d3b99ac6a9f4f286569950bcd344a9f9f3011b417a46565abad35
+MISC ChangeLog 31822 RMD160 3b36449099fe47787519a63b638be0e91a98e4c3 SHA1 c79b5bf51da7bd7b321760fd1bab9570428d6ea1 SHA256 b2fe43f6058a484a524b1ed0220d3a273853fa526e6b130f86ead5352d34e6b8
 MISC metadata.xml 2177 RMD160 7fb05332a5564014005aea91cd62d4efc7587156 SHA1 e0774e6f4f08eaa49c0861c653d8557cf0eda640 SHA256 e62fb464ae82d480d882a14f378965bf18651cbb80c51234088fe8c2e0cd000c
